update indicator (due to compile and linker errors)

--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -34,6 +34,7 @@ platform_packages =
 ;    platformio/framework-arduinoespressif32 @ symlink:///home/manuel/Documents/PlatformIO/Projects/arduino-esp32
     platformio/framework-arduinoespressif32 @ https://github.com/mverch67/arduino-esp32.git#add_tca9535 ; based on 2.0.16
 board = seeed-sensecap-indicator
+board_build.partitions = default_16MB.csv
 board_check = true
 board_level = extra
 board_build.partitions = default_8MB.csv ; must be here for some reason, board.json is not enough !?
@@ -46,6 +47,7 @@ build_flags = ${esp32_base.build_flags}
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_SCREEN=1
   -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
+  -D HAS_TELEMETRY=0
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D RADIOLIB_DEBUG_SPI=0
   -D RADIOLIB_DEBUG_PROTOCOL=0
