Move to available.d for module inactive module configs

--- a/bin/config-dist.yaml
+++ b/bin/config-dist.yaml
@@ -1,5 +1,5 @@
-### Many device configs have been moved to config.d, and named [device].yaml.inactive.
-### To activate, simply rename the file to end in .yaml
+### Many device configs have been moved to /etc/meshtasticd/available.d
+### To activate, simply copy or link the appropriate file into /etc/meshtasticd/config.d
 
 ### Define your devices here using Broadcom pin numbering
 ### Uncomment the block that corresponds to your hardware
