update mesh-tab ILI9143 TFT

--- a/variants/diy/platformio.ini
+++ b/variants/diy/platformio.ini
@@ -89,8 +89,9 @@ build_flags =
   -D ARDUINO_USB_CDC_ON_BOOT=1
   -I variants/diy/t-energy-s3_e22
 
-; esp32-s3 + ra-sh01 lora + 3.2" ILI9143
-[env:mesh-tab]
+; esp32-s3 N16R2 + ra-sh01 lora
+; 3.2" TFT ILI9143 / XPT2046: https://www.aliexpress.com/item/1005006258575617.html
+[env:mesh-tab-3.2-resistive]
 extends = esp32s3_base
 board = um_feathers3
 board_level = extra
@@ -102,7 +103,7 @@ build_flags = ${esp32s3_base.build_flags}
   -D PRIVATE_HW
   -D CONFIG_ARDUHAL_ESP_LOG
   -D CONFIG_ARDUHAL_LOG_COLORS=1
-  -D CONFIG_DISABLE_HAL_LOCKS=1 ; "feels" to be a bit more stable without locks
+  -D CONFIG_DISABLE_HAL_LOCKS=1
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
@@ -126,9 +127,14 @@ build_flags = ${esp32s3_base.build_flags}
   -D RAM_SIZE=1024
   -D LGFX_DRIVER_TEMPLATE
   -D LGFX_DRIVER=LGFX_GENERIC
+  -D LGFX_SCREEN_WIDTH=240
+  -D LGFX_SCREEN_HEIGHT=320
   -D LGFX_PANEL=ILI9341
-  -D LGFX_OFFSET_ROTATION=1
+  -D LGFX_INVERT_COLOR=true
+  -D LGFX_RGB_ORDER=false
+  -D LGFX_ROTATION=1
   -D LGFX_TOUCH=XPT2046
+  -D SPI_FREQUENCY=60000000 ; if image is distorted then lower to 40 MHz
   -D LGFX_PIN_SCK=12
   -D LGFX_PIN_MOSI=13
   -D LGFX_PIN_MISO=11
@@ -136,6 +142,7 @@ build_flags = ${esp32s3_base.build_flags}
   -D LGFX_PIN_CS=10
   -D LGFX_PIN_RST=-1
   -D LGFX_PIN_BL=42
+  -D LGFX_TOUCH_SPI_HOST=2
   -D LGFX_TOUCH_INT=41
   -D LGFX_TOUCH_CS=7
   -D LGFX_TOUCH_CLK=12
@@ -145,6 +152,7 @@ build_flags = ${esp32s3_base.build_flags}
   -D LGFX_TOUCH_X_MAX=3900
   -D LGFX_TOUCH_Y_MIN=400
   -D LGFX_TOUCH_Y_MAX=3900
+  -D LGFX_TOUCH_ROTATION=4
   -D VIEW_320x240
   -D USE_PACKET_API
   -I lib/device-ui/generated/ui_320x240
@@ -156,5 +164,3 @@ build_src_filter = ${esp32_base.build_src_filter}
   +<../lib/device-ui/source>
 lib_deps = ${esp32_base.lib_deps}
   lovyan03/LovyanGFX@^1.1.16
-  earlephilhower/ESP8266Audio@^1.9.7
-  earlephilhower/ESP8266SAM@^1.0.1
