--- a/variants/diy/platformio.ini
+++ b/variants/diy/platformio.ini
@@ -91,7 +91,7 @@ build_flags =
 
 ; esp32-s3 N16R2 + ra-sh01 lora
 ; 3.2" TFT ILI9143 / XPT2046: https://www.aliexpress.com/item/1005006258575617.html
-[env:mesh-tab-3.2-resistive]
+[env:mesh-tab-3-2-resistive]
 extends = esp32s3_base
 board = um_feathers3
 board_level = extra
