try: disable duplicate locks

--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -48,6 +48,7 @@ build_flags = ${esp32_base.build_flags}
   -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
   -D HAS_TELEMETRY=0
   -D CONFIG_ARDUHAL_LOG_COLORS
+  -D CONFIG_DISABLE_HAL_LOCKS=1
   -D RADIOLIB_DEBUG_SPI=0
   -D RADIOLIB_DEBUG_PROTOCOL=0
   -D RADIOLIB_DEBUG_BASIC=0
