--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = tbeam
+default_envs = tbeam
 ;default_envs = pico
 ;default_envs = tbeam-s3-core
 ;default_envs = tbeam0.7
@@ -29,7 +29,7 @@
 ;default_envs = rak4631
 ;default_envs = rak4631_eth_gw
 ;default_envs = rak2560
-default_envs = rak_wismeshtap
+;default_envs = rak_wismeshtap
 ;default_envs = wio-e5
 ;default_envs = radiomaster_900_bandit_nano
 ;default_envs = radiomaster_900_bandit_micro
