upgrade toolchain for nrf52 to gcc 9.3.1

--- a/arch/nrf52/nrf52.ini
+++ b/arch/nrf52/nrf52.ini
@@ -5,7 +5,7 @@ extends = arduino_base
 platform_packages =
   ; our custom Git version until they merge our PR
   framework-arduinoadafruitnrf52 @ https://github.com/geeksville/Adafruit_nRF52_Arduino.git
-
+  toolchain-gccarmnoneeabi@~1.90301.0
 build_type = debug
 build_flags =
   -include arch/nrf52/cpp_overrides/lfs_util.h
