try-fix (workaround) T-Deck audio crash

--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -15,7 +15,7 @@ build_flags = ${esp32_base.build_flags}
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
   -D INPUTDRIVER_I2C_KBD_TYPE=0x55
   -D INPUTDRIVER_ENCODER_TYPE=3
-  -D INPUTDRIVER_ENCODER_LEFT=1
+;  -D INPUTDRIVER_ENCODER_LEFT=1 ; disabled because it's used by I2S audio
   -D INPUTDRIVER_ENCODER_RIGHT=2
   -D INPUTDRIVER_ENCODER_UP=3
   -D INPUTDRIVER_ENCODER_DOWN=15
@@ -57,5 +57,5 @@ lib_deps =
   ${esp32_base.lib_deps}
 	lovyan03/LovyanGFX@^1.1.16
   bitbank2/bb_captouch@1.2.2 ; alternative touch library supporting GT911
-  earlephilhower/ESP8266Audio@^1.9.7
+  earlephilhower/ESP8266Audio@^1.9.9
   earlephilhower/ESP8266SAM@^1.0.1
