--- a/platformio.ini
+++ b/platformio.ini
@@ -81,6 +81,7 @@ build_flags = -Wno-missing-field-initializers
   -DRADIOLIB_EXCLUDE_LORAWAN=1
   -DMESHTASTIC_EXCLUDE_DROPZONE=1
   -DMESHTASTIC_EXCLUDE_REMOTEHARDWARE=1
+  -DMESHTASTIC_EXCLUDE_POWERSTRESS=1 ; exclude power stress test module from main firmware
   #-DBUILD_EPOCH=$UNIX_TIME
   ;-D OLED_PL
 
