Exclude some niche modules by default and populate exclude_modules (#5300)
* Exclude some niche modules by default

* Start of intelligently excluding modules

---------

Co-authored-by: Tom Fifield <tom@tomfifield.net>

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,6 +53,7 @@ extra_scripts = bin/platformio-custom.py
 ; FIXME: fix lib/BluetoothOTA dependency back on src/ so we can remove -Isrc
 ; The Radiolib stuff will speed up building considerably. Exclud all the stuff we dont need.
 build_flags = -Wno-missing-field-initializers
+
 	-Wno-format
 	-Isrc -Isrc/mesh -Isrc/mesh/generated -Isrc/gps -Isrc/buzz -Wl,-Map,.pio/build/output.map
 	-DUSE_THREAD_NAMES
@@ -80,8 +81,10 @@ build_flags = -Wno-missing-field-initializers
 	-DRADIOLIB_EXCLUDE_LORAWAN=1
 	-DMESHTASTIC_EXCLUDE_DROPZONE=1
 	-DMESHTASTIC_EXCLUDE_REMOTEHARDWARE=1
+  -DMESHTASTIC_EXCLUDE_POWERSTRESS=1 ; exclude power stress test module from main firmware
         #-DBUILD_EPOCH=$UNIX_TIME
         ;-D OLED_PL
+
 monitor_speed = 115200
 monitor_filters = direct
 lib_deps =
