--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ default_envs = tbeam
 ;default_envs = rak4631
 ;default_envs = rak4631_eth_gw
 ;default_envs = rak2560
-;default_envs = rak10701
+;default_envs = rak_wismeshtap
 ;default_envs = wio-e5
 ;default_envs = radiomaster_900_bandit_nano
 ;default_envs = radiomaster_900_bandit_micro
