--- a/platformio.ini
+++ b/platformio.ini
@@ -88,7 +88,6 @@ build_flags = -Wno-missing-field-initializers
 monitor_speed = 115200
 monitor_filters = direct
 lib_deps =
-	jgromes/RadioLib@7.1.0
 	https://github.com/meshtastic/esp8266-oled-ssd1306.git#e16cee124fe26490cb14880c679321ad8ac89c95
 	mathertel/OneButton@2.6.1
 	https://github.com/meshtastic/arduino-fsm.git#7db3702bf0cfe97b783d6c72595e3f38e0b19159
@@ -121,6 +120,10 @@ lib_deps =
 	knolleary/PubSubClient@2.8
 	arduino-libraries/NTPClient@3.1.0
 	arcao/Syslog@2.0.0
+
+[radiolib_base]
+lib_deps =
+	jgromes/RadioLib@7.1.0
 
 ; Common libs for environmental measurements in telemetry module
 ; (not included in native / portduino)
