--- a/platformio.ini
+++ b/platformio.ini
@@ -88,7 +88,6 @@ build_flags = -Wno-missing-field-initializers
 monitor_speed = 115200
 monitor_filters = direct
 lib_deps =
-	jgromes/RadioLib@7.0.2
 	https://github.com/meshtastic/esp8266-oled-ssd1306.git#e16cee124fe26490cb14880c679321ad8ac89c95
 	mathertel/OneButton@2.6.1
 	https://github.com/meshtastic/arduino-fsm.git#7db3702bf0cfe97b783d6c72595e3f38e0b19159
@@ -96,6 +95,7 @@ lib_deps =
 	https://github.com/meshtastic/ArduinoThread.git#1ae8778c85d0a2a729f989e0b1e7d7c4dc84eef0
 	nanopb/Nanopb@0.4.9
 	erriez/ErriezCRC32@1.0.1
+
 ; Used for the code analysis in PIO Home / Inspect
 check_tool = cppcheck
 check_skip_packages = yes
@@ -120,6 +120,10 @@ lib_deps =
 	knolleary/PubSubClient@2.8
 	arduino-libraries/NTPClient@3.1.0
 	arcao/Syslog@2.0.0
+
+[radiolib_base]
+lib_deps =
+	jgromes/RadioLib@7.1.0
 
 ; Common libs for environmental measurements in telemetry module
 ; (not included in native / portduino)
