--- a/variants/mesh-tab/platformio.ini
+++ b/variants/mesh-tab/platformio.ini
@@ -103,19 +103,20 @@ build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_TOUCH_Y_MAX=3900
   -D LGFX_TOUCH_ROTATION=1
 
-; 3.5" TN TFT ILI9341 / XPT2046: https://vi.aliexpress.com/item/32985467436.html
+; 3.5" TN TFT ILI9488 / XPT2046: https://vi.aliexpress.com/item/32985467436.html
 [env:mesh-tab-3-5-TN-resistive]
 extends = mesh_tab_base
 build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_SCREEN_WIDTH=320
   -D LGFX_SCREEN_HEIGHT=480
-  -D LGFX_PANEL=ILI9488
-  -D LGFX_INVERT_COLOR=true
+  -D LGFX_PANEL=HX8357B
+  -D LV_COLOR_DEPTH=24
+  -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
+  -D LGFX_INVERT_COLOR=false
   -D LGFX_RGB_ORDER=false
   -D LGFX_DLEN_16BITS=true
   -D LGFX_ROTATION=1
   -D LGFX_TOUCH=XPT2046
-  -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
   -D LGFX_TOUCH_SPI_HOST=2
   -D LGFX_TOUCH_CS=7
   -D LGFX_TOUCH_CLK=12
@@ -182,11 +183,11 @@ extends = mesh_tab_base
 build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_SCREEN_WIDTH=320
   -D LGFX_SCREEN_HEIGHT=480
-  -D LGFX_PANEL=ILI9488
+  -D LGFX_PANEL=HX8357B
   -D LGFX_INVERT_COLOR=true
   -D LGFX_RGB_ORDER=false
   -D LGFX_DLEN_16BITS=true
-  -D LGFX_ROTATION=1
+  -D LGFX_ROTATION=4
   -D LGFX_TOUCH=FT5x06
   -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
   -D LGFX_TOUCH_I2C_PORT=0
