set T-Deck audio to unused 48 (mem mclk)

--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -15,7 +15,7 @@ build_flags = ${esp32_base.build_flags}
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
   -D INPUTDRIVER_I2C_KBD_TYPE=0x55
   -D INPUTDRIVER_ENCODER_TYPE=3
-;  -D INPUTDRIVER_ENCODER_LEFT=1 ; disabled because it's used by I2S audio
+  -D INPUTDRIVER_ENCODER_LEFT=1
   -D INPUTDRIVER_ENCODER_RIGHT=2
   -D INPUTDRIVER_ENCODER_UP=3
   -D INPUTDRIVER_ENCODER_DOWN=15
