update mesh-tab ini

--- a/variants/mesh-tab/platformio.ini
+++ b/variants/mesh-tab/platformio.ini
@@ -83,12 +83,13 @@ build_flags = ${mesh_tab_base.build_flags}
 [env:mesh-tab-3-5-IPS-resistive]
 extends = mesh_tab_base
 build_flags = ${mesh_tab_base.build_flags}
+  -D DISPLAY_SET_RESOLUTION
   -D LGFX_SCREEN_WIDTH=320
   -D LGFX_SCREEN_HEIGHT=480
   -D LGFX_PANEL=ILI9488
   -D LGFX_INVERT_COLOR=true
   -D LGFX_RGB_ORDER=false
-  -D LGFX_DLEN_16BITS=true
+  -D LGFX_DLEN_16BITS=false
   -D LGFX_ROTATION=1
   -D LGFX_TOUCH=XPT2046
   -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
@@ -107,15 +108,15 @@ build_flags = ${mesh_tab_base.build_flags}
 [env:mesh-tab-3-5-TN-resistive]
 extends = mesh_tab_base
 build_flags = ${mesh_tab_base.build_flags}
+  -D DISPLAY_SET_RESOLUTION
   -D LGFX_SCREEN_WIDTH=320
   -D LGFX_SCREEN_HEIGHT=480
   -D LGFX_PANEL=HX8357B
-  -D LV_COLOR_DEPTH=24
-  -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
+  -D SPI_FREQUENCY=60000000
   -D LGFX_INVERT_COLOR=false
   -D LGFX_RGB_ORDER=false
-  -D LGFX_DLEN_16BITS=true
-  -D LGFX_ROTATION=1
+  -D LGFX_DLEN_16BITS=false
+  -D LGFX_ROTATION=4
   -D LGFX_TOUCH=XPT2046
   -D LGFX_TOUCH_SPI_HOST=2
   -D LGFX_TOUCH_CS=7
@@ -156,12 +157,13 @@ build_flags = ${mesh_tab_base.build_flags}
 [env:mesh-tab-3-5-IPS-capacitive]
 extends = mesh_tab_base
 build_flags = ${mesh_tab_base.build_flags}
+  -D DISPLAY_SET_RESOLUTION
   -D LGFX_SCREEN_WIDTH=320
   -D LGFX_SCREEN_HEIGHT=480
   -D LGFX_PANEL=ILI9488
   -D LGFX_INVERT_COLOR=true
   -D LGFX_RGB_ORDER=false
-  -D LGFX_DLEN_16BITS=true
+  -D LGFX_DLEN_16BITS=false
   -D LGFX_ROTATION=1
   -D LGFX_TOUCH=FT5x06
   -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
@@ -181,12 +183,13 @@ build_flags = ${mesh_tab_base.build_flags}
 [env:mesh-tab-4-0-IPS-capacitive]
 extends = mesh_tab_base
 build_flags = ${mesh_tab_base.build_flags}
+  -D DISPLAY_SET_RESOLUTION
   -D LGFX_SCREEN_WIDTH=320
   -D LGFX_SCREEN_HEIGHT=480
   -D LGFX_PANEL=HX8357B
   -D LGFX_INVERT_COLOR=true
   -D LGFX_RGB_ORDER=false
-  -D LGFX_DLEN_16BITS=true
+  -D LGFX_DLEN_16BITS=false
   -D LGFX_ROTATION=4
   -D LGFX_TOUCH=FT5x06
   -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
