rotation fix; added ST7789 3.2" display

--- a/variants/mesh-tab/platformio.ini
+++ b/variants/mesh-tab/platformio.ini
@@ -56,6 +56,29 @@ build_src_filter = ${esp32_base.build_src_filter}
 lib_deps = ${esp32_base.lib_deps}
   lovyan03/LovyanGFX@^1.1.16
 
+; 3.2" TN TFT ST7789 / XPT2046: https://vi.aliexpress.com/item/1005005933490544.html
+[env:mesh-tab-3-2-TN-resistive]
+extends = mesh_tab_base
+build_flags = ${mesh_tab_base.build_flags}
+  -D LGFX_SCREEN_WIDTH=240
+  -D LGFX_SCREEN_HEIGHT=320
+  -D LGFX_PANEL=ST7789
+  -D LGFX_INVERT_COLOR=false
+  -D LGFX_RGB_ORDER=false
+  -D LGFX_ROTATION=1
+  -D LGFX_TOUCH=XPT2046
+  -D SPI_FREQUENCY=60000000
+  -D LGFX_TOUCH_SPI_HOST=2
+  -D LGFX_TOUCH_CS=7
+  -D LGFX_TOUCH_CLK=12
+  -D LGFX_TOUCH_DO=11
+  -D LGFX_TOUCH_DIN=13
+  -D LGFX_TOUCH_X_MIN=300
+  -D LGFX_TOUCH_X_MAX=3900
+  -D LGFX_TOUCH_Y_MIN=400
+  -D LGFX_TOUCH_Y_MAX=3900
+  -D LGFX_TOUCH_ROTATION=4
+
 ; 3.2" IPS TFT ILI9341 / XPT2046: https://www.aliexpress.com/item/1005006258575617.html
 [env:mesh-tab-3-2-IPS-resistive]
 extends = mesh_tab_base
@@ -90,7 +113,7 @@ build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_INVERT_COLOR=true
   -D LGFX_RGB_ORDER=false
   -D LGFX_DLEN_16BITS=false
-  -D LGFX_ROTATION=1
+  -D LGFX_ROTATION=2
   -D LGFX_TOUCH=XPT2046
   -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
   -D LGFX_TOUCH_SPI_HOST=2
