--- a/variants/rak11310/platformio.ini
+++ b/variants/rak11310/platformio.ini
@@ -3,6 +3,7 @@ extends = rp2040_base
 board = wiscore_rak11300
 upload_protocol = picotool
 # keep an old SDK to use less memory.
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git#v1.2.0-gcc12
 platform_packages = framework-arduinopico@https://github.com/earlephilhower/arduino-pico.git#3.7.2
 
 # add our variants files to the include and src paths
