--- a/.github/actions/build-variant/action.yml
+++ b/.github/actions/build-variant/action.yml
@@ -51,7 +51,7 @@ runs:
         file: build.tar
         target: build.tar
         token: ${{ inputs.github_token }}
-        version: v2.5.3
+        version: tags/v2.5.3
 
     - name: Unpack web ui
       if: inputs.include-web-ui == 'true'
