mesh-tab touch updates

--- a/variants/mesh-tab/platformio.ini
+++ b/variants/mesh-tab/platformio.ini
@@ -68,6 +68,7 @@ build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_ROTATION=1
   -D LGFX_TOUCH=XPT2046
   -D SPI_FREQUENCY=60000000
+  -D LGFX_TOUCH_SPI_FREQ=2500000
   -D LGFX_TOUCH_SPI_HOST=2
   -D LGFX_TOUCH_CS=7
   -D LGFX_TOUCH_CLK=12
@@ -91,6 +92,7 @@ build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_ROTATION=1
   -D LGFX_TOUCH=XPT2046
   -D SPI_FREQUENCY=60000000 ; if image is distorted then lower to 40 MHz
+  -D LGFX_TOUCH_SPI_FREQ=2500000
   -D LGFX_TOUCH_SPI_HOST=2
   -D LGFX_TOUCH_CS=7
   -D LGFX_TOUCH_CLK=12
@@ -115,7 +117,8 @@ build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_DLEN_16BITS=false
   -D LGFX_ROTATION=2
   -D LGFX_TOUCH=XPT2046
-  -D SPI_FREQUENCY=30000000 ; may go higher upto 40/60/80 MHz
+  -D SPI_FREQUENCY=40000000 ; may go higher upto 40/60/80 MHz
+  -D LGFX_TOUCH_SPI_FREQ=2500000
   -D LGFX_TOUCH_SPI_HOST=2
   -D LGFX_TOUCH_CS=7
   -D LGFX_TOUCH_CLK=12
@@ -125,7 +128,7 @@ build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_TOUCH_X_MAX=3900
   -D LGFX_TOUCH_Y_MIN=400
   -D LGFX_TOUCH_Y_MAX=3900
-  -D LGFX_TOUCH_ROTATION=1
+  -D LGFX_TOUCH_ROTATION=0
 
 ; 3.5" TN TFT ILI9488 / XPT2046: https://vi.aliexpress.com/item/32985467436.html
 [env:mesh-tab-3-5-TN-resistive]
@@ -141,6 +144,7 @@ build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_DLEN_16BITS=false
   -D LGFX_ROTATION=4
   -D LGFX_TOUCH=XPT2046
+  -D LGFX_TOUCH_SPI_FREQ=2500000
   -D LGFX_TOUCH_SPI_HOST=2
   -D LGFX_TOUCH_CS=7
   -D LGFX_TOUCH_CLK=12
@@ -150,7 +154,7 @@ build_flags = ${mesh_tab_base.build_flags}
   -D LGFX_TOUCH_X_MAX=3900
   -D LGFX_TOUCH_Y_MIN=400
   -D LGFX_TOUCH_Y_MAX=3900
-  -D LGFX_TOUCH_ROTATION=1
+  -D LGFX_TOUCH_ROTATION=2
 
 ; 3.2" IPS TFT ILI9341 / FT6236: https://vi.aliexpress.com/item/1005006624072350.html
 [env:mesh-tab-3-2-IPS-capacitive]
