mesh-tab: enable alert message menu

--- a/variants/mesh-tab/platformio.ini
+++ b/variants/mesh-tab/platformio.ini
@@ -33,6 +33,7 @@ build_flags = ${esp32s3_base.build_flags}
   -D MAX_THREADS=40
   -D HAS_SCREEN=0
   -D HAS_TFT=1
+  -D USE_PIN_BUZZER
   -D RAM_SIZE=1024
   -D LGFX_DRIVER_TEMPLATE
   -D LGFX_DRIVER=LGFX_GENERIC
