Streamline board definitions for first tech preview. TBD: Indicator Support

--- a/variants/unphone/platformio.ini
+++ b/variants/unphone/platformio.ini
@@ -1,9 +1,9 @@
 ; platformio.ini for unphone meshtastic
 
 [env:unphone]
-
 extends = esp32s3_base
 board = unphone9
+board_level = extra
 upload_speed = 921600
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
@@ -12,7 +12,8 @@ build_unflags =
   ${esp32s3_base.build_unflags}
   -D ARDUINO_USB_MODE
 
-build_flags = ${esp32_base.build_flags}
+build_flags =
+  ${esp32s3_base.build_flags}
   -D UNPHONE
   -I variants/unphone
   -D ARDUINO_USB_MODE=0
@@ -22,8 +23,11 @@ build_flags = ${esp32_base.build_flags}
   -D UNPHONE_UI0=0
   -D UNPHONE_LORA=0
   -D UNPHONE_FACTORY_MODE=0
+  -D USE_SX127x
 
-build_src_filter = ${esp32_base.build_src_filter} +<../variants/unphone>
+build_src_filter =
+  ${esp32s3_base.build_src_filter}
+  +<../variants/unphone>
 
 lib_deps = ${esp32s3_base.lib_deps}
   lovyan03/LovyanGFX@ 1.1.16
@@ -32,25 +36,15 @@ lib_deps = ${esp32s3_base.lib_deps}
 
 
 [env:unphone-tft]
-extends = esp32s3_base
-board_level = extra
-board = unphone
+extends = env:unphone
+board_level = main
 board_build.partitions = default_8MB.csv
-monitor_speed = 115200
-monitor_filters = esp32_exception_decoder
-build_flags = ${esp32_base.build_flags}
-  -D UNPHONE
-  -D UNPHONE_ACCEL=0
-  -D UNPHONE_TOUCHS=0
-  -D UNPHONE_SDCARD=0
-  -D UNPHONE_UI0=0
-  -D UNPHONE_LORA=0
-  -D UNPHONE_FACTORY_MODE=0
+build_flags =
+  ${env:unphone.build_flags}
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
-  -D USE_SX127x
   -D MAX_NUM_NODES=200
   -D MAX_THREADS=40
   -D HAS_SCREEN=0
@@ -71,18 +65,12 @@ build_flags = ${esp32_base.build_flags}
   -D CALIBRATE_TOUCH=0
   -D LGFX_DRIVER=LGFX_UNPHONE_V9
   -D VIEW_320x240
-;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
 	-I lib/device-ui/generated/ui_320x240
-  -I variants/unphone
 
-build_src_filter = ${esp32_base.build_src_filter} +<../variants/unphone>
+build_src_filter =
+  ${env:unphone.build_src_filter}
   +<../lib/device-ui/generated/ui_320x240>
   +<../lib/device-ui/resources>
   +<../lib/device-ui/locale>
   +<../lib/device-ui/source>
-
-lib_deps = ${esp32s3_base.lib_deps}
-  lovyan03/LovyanGFX@^1.1.16
-  https://gitlab.com/hamishcunningham/unphonelibrary#meshtastic@9.0.0
-  adafruit/Adafruit NeoPixel@1.12.0
