--- a/variants/picomputer-s3/platformio.ini
+++ b/variants/picomputer-s3/platformio.ini
@@ -1,7 +1,8 @@
-[env:picomputer-s3-oled]
+[env:picomputer-s3]
 extends = esp32s3_base
 board = bpi_picow_esp32_s3
-
+board_check = true
+board_level = extra
 ;OpenOCD flash method
 ;upload_protocol = esp-builtin
 ;Normal method
@@ -14,17 +15,19 @@ build_flags =
 
 lib_deps = 
   ${esp32s3_base.lib_deps}
-  lovyan03/LovyanGFX@^1.1.8
+  lovyan03/LovyanGFX@^1.1.16
+
+build_src_filter =
+  ${esp32s3_base.build_src_filter}
 
 
-[env:picomputer-s3]
-extends = esp32s3_base
-board = bpi_picow_esp32_s3
+[env:picomputer-s3-tft]
+extends = env:picomputer-s3
+board_level = main
 board_build.partitions = default_8MB.csv ; just for test
-board_check = true
-upload_protocol = esptool
-build_flags = ${esp32_base.build_flags}
-	-D PICOMPUTER_S3
+
+build_flags =
+  ${env:picomputer-s3.build_flags}
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
@@ -50,12 +53,11 @@ build_flags = ${esp32_base.build_flags}
 ;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
 	-I lib/device-ui/generated/ui_320x240
-  -I variants/picomputer-s3
-build_src_filter = ${esp32_base.build_src_filter}
+
+build_src_filter =
+  ${env:picomputer-s3.build_src_filter}
   +<../lib/device-ui/generated/ui_320x240>
   +<../lib/device-ui/resources>
   +<../lib/device-ui/locale>
   +<../lib/device-ui/source>
-lib_deps =
-  ${esp32_base.lib_deps}
-	lovyan03/LovyanGFX@^1.1.16
+
