--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -3,11 +3,29 @@
 extends = esp32s3_base
 board = t-deck
 board_level = extra
-board_build.partitions = default_16MB.csv ; just for test
 board_check = true
 upload_protocol = esptool
-build_flags = ${esp32_base.build_flags}
-	-D T_DECK
+
+build_flags = ${esp32s3_base.build_flags} 
+  -DT_DECK 
+  -DBOARD_HAS_PSRAM
+  -DMAX_THREADS=40
+  -DGPS_POWER_TOGGLE
+  -Ivariants/t-deck
+
+lib_deps = ${esp32s3_base.lib_deps}
+	lovyan03/LovyanGFX@^1.1.16
+  earlephilhower/ESP8266Audio@^1.9.9
+  earlephilhower/ESP8266SAM@^1.0.1
+
+
+[env:t-deck-tft]
+extends = env:t-deck
+board_build.partitions = default_16MB.csv ; just for test
+board_level = main
+
+build_flags =
+  ${env:t-deck.build_flags}
   -D CONFIG_DISABLE_HAL_LOCKS=1 ; "feels" to be a bit more stable without locks
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
@@ -21,12 +39,10 @@ build_flags = ${esp32_base.build_flags}
   -D INPUTDRIVER_ENCODER_DOWN=15
   -D INPUTDRIVER_ENCODER_BTN=0
   -D MAX_NUM_NODES=250
-  -D MAX_THREADS=40
   -D HAS_SCREEN=0
   -D HAS_TFT=1
   -D USE_I2S_BUZZER
   -D RAM_SIZE=1024
-  -D GPS_POWER_TOGGLE
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D LV_CONF_INCLUDE_SIMPLE
 	-D LV_COMP_CONF_INCLUDE_SIMPLE
@@ -47,15 +63,14 @@ build_flags = ${esp32_base.build_flags}
 ;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
 	-I lib/device-ui/generated/ui_320x240
-	-I variants/t-deck
-build_src_filter = ${esp32_base.build_src_filter}
+
+build_src_filter =
+  ${env:t-deck.build_src_filter}
   +<../lib/device-ui/generated/ui_320x240>
   +<../lib/device-ui/resources>
   +<../lib/device-ui/locale>
   +<../lib/device-ui/source>
+
 lib_deps =
-  ${esp32_base.lib_deps}
-	lovyan03/LovyanGFX@^1.1.16
+  ${env:t-deck.lib_deps}
   bitbank2/bb_captouch@1.2.2 ; alternative touch library supporting GT911
-  earlephilhower/ESP8266Audio@^1.9.9
-  earlephilhower/ESP8266SAM@^1.0.1
