use board/unphone.json

--- a/variants/unphone/platformio.ini
+++ b/variants/unphone/platformio.ini
@@ -2,15 +2,11 @@
 
 [env:unphone]
 extends = esp32s3_base
-board = unphone9
+board = unphone
 board_level = extra
 upload_speed = 921600
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-
-build_unflags =
-  ${esp32s3_base.build_unflags}
-  -D ARDUINO_USB_MODE
 
 build_flags =
   ${esp32s3_base.build_flags}
