Streamline board definitions for first tech preview. (#5390)
* Streamline board definitions for first tech preview. TBD: Indicator Support

* add point-of-checkin

* use board/unphone.json

---------

Co-authored-by: mverch67 <manuel.verch@gmx.de>

--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -6,6 +6,7 @@ platform_packages =
 
 board = seeed-sensecap-indicator
 board_check = true
+board_level = extra
 upload_protocol = esptool
 
 build_flags = ${esp32_base.build_flags}
@@ -24,22 +25,17 @@ build_flags = ${esp32_base.build_flags}
 
 lib_deps = ${esp32s3_base.lib_deps}
   https://github.com/mverch67/LovyanGFX#develop
-  earlephilhower/ESP8266Audio@^1.9.7
+  earlephilhower/ESP8266Audio@^1.9.9
   earlephilhower/ESP8266SAM@^1.0.1
 
 
 [env:seeed-sensecap-indicator-tft]
-extends = esp32s3_base
-platform_packages =
-;    platformio/framework-arduinoespressif32 @ symlink:///home/manuel/Documents/PlatformIO/Projects/arduino-esp32
-    platformio/framework-arduinoespressif32 @ https://github.com/mverch67/arduino-esp32.git#add_tca9535 ; based on 2.0.16
-board = seeed-sensecap-indicator
-board_check = true
-board_level = extra
+extends = env:seeed-sensecap-indicator
+board_level = main
 board_build.partitions = default_8MB.csv ; must be here for some reason, board.json is not enough !?
-upload_protocol = esptool
-build_flags = ${esp32_base.build_flags}
-	-D SENSECAP_INDICATOR
+
+build_flags =
+  ${env:seeed-sensecap-indicator.build_flags}
   -D HAS_TELEMETRY=0
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
@@ -47,17 +43,7 @@ build_flags = ${esp32_base.build_flags}
   -D MESHTASTIC_EXCLUDE_SCREEN=1
   -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
   -D HAS_TELEMETRY=0
-  -D CONFIG_ARDUHAL_LOG_COLORS
   -D CONFIG_DISABLE_HAL_LOCKS=1
-  -D RADIOLIB_DEBUG_SPI=0
-  -D RADIOLIB_DEBUG_PROTOCOL=0
-  -D RADIOLIB_DEBUG_BASIC=0
-  -D RADIOLIB_VERBOSE_ASSERT=0
-  -D RADIOLIB_SPI_PARANOID=0
-  -D IO_EXPANDER=0x40
-  -D IO_EXPANDER_IRQ=42
-  ;-D IO_EXPANDER_DEBUG
-  -D USE_ARDUINO_HAL_GPIO
   -D MAX_NUM_NODES=250
   -D HAS_SCREEN=0
   -D HAS_TFT=1
@@ -81,15 +67,14 @@ build_flags = ${esp32_base.build_flags}
 ;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
 	-I lib/device-ui/generated/ui_320x240
-	-I variants/seeed-sensecap-indicator
-build_src_filter = ${esp32_base.build_src_filter}
+
+build_src_filter =
+  ${env:seeed-sensecap-indicator.build_src_filter}
   +<../lib/device-ui/generated/ui_320x240>
   +<../lib/device-ui/resources>
   +<../lib/device-ui/locale>
   +<../lib/device-ui/source>
-lib_deps = ${esp32s3_base.lib_deps}
-  https://github.com/mverch67/LovyanGFX#develop
-;  file:///home/manuel/Documents/PlatformIO/Projects/LovyanGFX
-  https://github.com/bitbank2/bb_captouch ; alternative touch library supporting FT6x36
-  earlephilhower/ESP8266Audio@^1.9.7
-  earlephilhower/ESP8266SAM@^1.0.1
+
+lib_deps =
+  ${env:seeed-sensecap-indicator.lib_deps}
+  https://github.com/bitbank2/bb_captouch.git#8f2f06462ff597847921739376a299db93612417 ; alternative touch library supporting FT6x36
