Add usb device support

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,9 @@
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   "forwardPorts": [4403],
 
+  // Use "--device=" to make a local device available inside the container.
+  // "runArgs": ["--device=/dev/ttyACM0"],
+
   // Run commands to prepare the container for use
   "postCreateCommand": ".devcontainer/setup.sh"
 }
