Add trunk.io to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,11 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": ["ms-vscode.cpptools", "platformio.platformio-ide"]
+      "extensions": [
+        "ms-vscode.cpptools",
+        "platformio.platformio-ide",
+        "Trunk.io"
+      ]
     }
   },
 
