--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -26,7 +26,10 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     python3-wheel \
     wget \
     zip \
-    usbutils hwdata gpg gnupg2 \
+    usbutils \
+    hwdata \
+    gpg \
+    gnupg2 \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN pipx install platformio==6.1.15
