--- a/variants/portduino/platformio.ini
+++ b/variants/portduino/platformio.ini
@@ -1,33 +1,30 @@
-[env:native]
+[native_base]
 extends = portduino_base
-; The pkg-config commands below optionally add link flags.
-; the || : is just a "or run the null command" to avoid returning an error code
-build_flags = ${portduino_base.build_flags} -O0 -I variants/portduino
+build_flags = ${portduino_base.build_flags} -I variants/portduino
   -D ARCH_PORTDUINO
   -I /usr/include
-  !pkg-config --libs libulfius --silence-errors || :
-  !pkg-config --libs openssl --silence-errors || :
 board = cross_platform
 lib_deps = ${portduino_base.lib_deps}
 build_src_filter = ${portduino_base.build_src_filter}
 
+[env:native]
+extends = native_base
+; The pkg-config commands below optionally add link flags.
+; the || : is just a "or run the null command" to avoid returning an error code
+build_flags = ${native_base.build_flags}
+  !pkg-config --libs libulfius --silence-errors || :
+  !pkg-config --libs openssl --silence-errors || :
 
 [env:native-tft]
-extends = env:native
+extends = native_base
 build_type = release
-build_flags = ${portduino_base.build_flags} -Os -lX11 -linput -lxkbcommon -ffunction-sections -fdata-sections -Wl,--gc-sections
+build_flags = ${native_base.build_flags} -Os -lX11 -linput -lxkbcommon -ffunction-sections -fdata-sections -Wl,--gc-sections
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D RAM_SIZE=16384
-  -D USE_X11=1 ; enables usage of X11
+  -D USE_X11=1
   -D HAS_TFT=1
   -D HAS_SCREEN=0
   -D LV_BUILD_TEST=0
-;  -D CALIBRATE_TOUCH=0
-  -D LV_USE_LOG=0
-  -D LV_USE_SYSMON=0
-  -D LV_USE_PROFILER=0
-  -D LV_USE_PERF_MONITOR=0
-  -D LV_USE_MEM_MONITOR=0
   -D LV_USE_LIBINPUT=1
   -D LV_LVGL_H_INCLUDE_SIMPLE
   -D LV_CONF_INCLUDE_SIMPLE
@@ -36,8 +33,7 @@ build_flags = ${portduino_base.build_flags} -Os -lX11 -linput -lxkbcommon -ffunc
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
   -D USE_PACKET_API
   -I lib/device-ui/generated/ui_320x240
-
-build_src_filter = ${env:native.build_src_filter}
+build_src_filter = ${native_base.build_src_filter}
   -<graphics/TFTDisplay.cpp>
   +<../lib/device-ui/generated/ui_320x240>
   +<../lib/device-ui/generated/ui_320x240/fonts>
@@ -46,16 +42,15 @@ build_src_filter = ${env:native.build_src_filter}
   +<../lib/device-ui/locale>
   +<../lib/device-ui/source>
 
-  
 [env:native-tft-debug]
-extends = env:native-tft
+extends = native_base
 build_type = debug
 board_level = extra
-build_flags = ${portduino_base.build_flags} -O0 -fsanitize=address -lX11 -linput -lxkbcommon
+build_flags = ${native_base.build_flags} -O0 -fsanitize=address -lX11 -linput -lxkbcommon
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D DEBUG_HEAP
   -D RAM_SIZE=16384
-  -D USE_X11=1 ; enables usage of X11
+  -D USE_X11=1
   -D HAS_TFT=1
   -D HAS_SCREEN=0
 ;  -D CALIBRATE_TOUCH=0
@@ -73,3 +68,4 @@ build_flags = ${portduino_base.build_flags} -O0 -fsanitize=address -lX11 -linput
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
   -D USE_PACKET_API
   -I lib/device-ui/generated/ui_320x240
+build_src_filter = ${env:native-tft.build_src_filter}
