--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -53,6 +53,12 @@ build_flags =
   -D LV_USE_LOG=0
   -D USE_LOG_DEBUG
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
+  -D RADIOLIB_BUILD_ARDUINO
+  -D RADIOLIB_DEBUG=0
+  -D RADIOLIB_DEBUG_BASIC=0
+  -D RADIOLIB_DEBUG_SPI=0
+  -D RADIOLIB_DEBUG_PROTOCOL=0
+  -D RADIOLIB_VERBOSE_ASSERT=1
   -D RADIOLIB_SPI_PARANOID=0
   -D CUSTOM_TOUCH_DRIVER
   -D CALIBRATE_TOUCH=0
