fix native tft targets for rpi

--- a/variants/portduino/platformio.ini
+++ b/variants/portduino/platformio.ini
@@ -33,6 +33,8 @@ build_flags = ${native_base.build_flags} -Os -lX11 -linput -lxkbcommon -ffunctio
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
   -D USE_PACKET_API
   -I lib/device-ui/generated/ui_320x240
+  !pkg-config --libs libulfius --silence-errors || :
+  !pkg-config --libs openssl --silence-errors || :
 build_src_filter = ${native_base.build_src_filter}
   -<graphics/TFTDisplay.cpp>
   +<../lib/device-ui/generated/ui_320x240>
@@ -68,4 +70,6 @@ build_flags = ${native_base.build_flags} -O0 -fsanitize=address -lX11 -linput -l
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
   -D USE_PACKET_API
   -I lib/device-ui/generated/ui_320x240
+  !pkg-config --libs libulfius --silence-errors || :
+  !pkg-config --libs openssl --silence-errors || :
 build_src_filter = ${env:native-tft.build_src_filter}
