--- a/variants/t-watch-s3/platformio.ini
+++ b/variants/t-watch-s3/platformio.ini
@@ -9,6 +9,7 @@ build_flags = ${esp32_base.build_flags}
   -DT_WATCH_S3
   -Ivariants/t-watch-s3
   -DPCF8563_RTC=0x51
+  -DHAS_BMA423=1
 
 lib_deps = ${esp32s3_base.lib_deps}
 	lovyan03/LovyanGFX@^1.1.9
@@ -16,3 +17,4 @@ lib_deps = ${esp32s3_base.lib_deps}
   adafruit/Adafruit DRV2605 Library@^1.2.2
   earlephilhower/ESP8266Audio@^1.9.9
   earlephilhower/ESP8266SAM@^1.0.1
+  lewisxhe/SensorLib@0.2.0
