InkHUD: initial commit (WIP) Publicly discloses the current work in progress. Not ready for use.

--- a/variants/t-echo/platformio.ini
+++ b/variants/t-echo/platformio.ini
@@ -1,4 +1,4 @@
-; First prototype eink/nrf52840/sx1262 device
+; Using original screen class
 [env:t-echo]
 extends = nrf52840_base
 board = t-echo
@@ -12,6 +12,7 @@ build_flags = ${nrf52840_base.build_flags} -Ivariants/t-echo
   -DEINK_DISPLAY_MODEL=GxEPD2_154_D67
   -DEINK_WIDTH=200
   -DEINK_HEIGHT=200
+  -DUSE_EINK
   -DUSE_EINK_DYNAMICDISPLAY            ; Enable Dynamic EInk
   -DEINK_LIMIT_FASTREFRESH=20          ; How many consecutive fast-refreshes are permitted
   -DEINK_LIMIT_RATE_BACKGROUND_SEC=30  ; Minimum interval between BACKGROUND updates
@@ -25,3 +26,25 @@ lib_deps =
   https://github.com/meshtastic/GxEPD2#55f618961db45a23eff0233546430f1e5a80f63a
   lewisxhe/PCF8563_Library@^1.0.1
 ;upload_protocol = fs
+
+; Using experimental InkHUD UI (work in progress)
+[env:t-echo-inkhud]
+extends = nrf52840_base
+board = t-echo
+board_level = extra
+board_check = true
+debug_tool = jlink
+build_flags = 
+  ${nrf52840_base.build_flags} 
+  -I variants/t-echo
+  -L "${platformio.libdeps_dir}/${this.__env__}/bsec2/src/cortex-m4/fpv4-sp-d16-hard"
+  -D MESHTASTIC_INCLUDE_NICHE_GRAPHICS ; Use NicheGraphics
+  -D MESHTASTIC_INCLUDE_INKHUD ; Use InkHUD (a NicheGraphics UI)
+  -D MESHTASTIC_EXCLUDE_SCREEN ; Suppress default Screen class
+  -D HAS_BUTTON=0 ; Suppress default ButtonThread
+
+build_src_filter = ${nrf52_base.build_src_filter} +<../variants/t-echo>
+lib_deps = 
+  https://github.com/ZinggJM/GFX_Root#2.0.0 ; Used by InkHUD as a "slimmer" version of AdafruitGFX
+  ${nrf52840_base.lib_deps}
+  lewisxhe/PCF8563_Library@^1.0.1
