fix trivy/DS002, checkov/CKV_DOCKER_3

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,8 @@
-# trunk-ignore-all(trivy/DS002)
-# trunk-ignore-all(trivy/DS026)
-# trunk-ignore-all(checkov/CKV_DOCKER_2)
-# trunk-ignore-all(checkov/CKV_DOCKER_3)
 FROM mcr.microsoft.com/devcontainers/cpp:1-debian-12
 
+USER root
+
 # [Optional] Uncomment this section to install additional packages.
-# trunk-ignore(terrascan/AC_DOCKER_0002)
-# trunk-ignore(hadolint/DL3008)
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
     ca-certificates \
@@ -35,3 +31,5 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 RUN pipx install platformio==6.1.15
 
 COPY 99-platformio-udev.rules /etc/udev/rules.d/99-platformio-udev.rules
+
+USER vscode
