hide docker extension popup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,11 @@
         "ms-vscode.cpptools",
         "platformio.platformio-ide",
         "Trunk.io"
-      ]
+      ],
+      "unwantedRecommendations": ["ms-azuretools.vscode-docker"],
+      "settings": {
+        "extensions.ignoreRecommendations": true
+      }
     }
   },
 
