fix trivy/DS026, checkov/CKV_DOCKER_2

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,8 @@ FROM mcr.microsoft.com/devcontainers/cpp:1-debian-12
 
 USER root
 
-# [Optional] Uncomment this section to install additional packages.
+# trunk-ignore(terrascan/AC_DOCKER_0002): Known terrascan issue
+# trunk-ignore(hadolint/DL3008): Use latest version of packages
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
     ca-certificates \
@@ -33,3 +34,5 @@ RUN pipx install platformio==6.1.15
 COPY 99-platformio-udev.rules /etc/udev/rules.d/99-platformio-udev.rules
 
 USER vscode
+
+HEALTHCHECK NONE
