wake screen with button only

--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -42,6 +42,7 @@ build_flags =
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_SCREEN=1
   -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
+  -D INPUTDRIVER_BUTTON_TYPE=38
   -D HAS_TELEMETRY=0
   -D CONFIG_DISABLE_HAL_LOCKS=1
   -D MAX_NUM_NODES=250
