--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -38,6 +38,7 @@ build_flags =
   -D INPUTDRIVER_ENCODER_UP=3
   -D INPUTDRIVER_ENCODER_DOWN=15
   -D INPUTDRIVER_ENCODER_BTN=0
+  -D INPUTDRIVER_BUTTON_TYPE=0
   -D MAX_NUM_NODES=250
   -D HAS_SCREEN=0
   -D HAS_TFT=1
@@ -58,7 +59,7 @@ build_flags =
   -D RADIOLIB_DEBUG_PROTOCOL=0
   -D RADIOLIB_VERBOSE_ASSERT=1
   -D RADIOLIB_SPI_PARANOID=0
-  -D CUSTOM_TOUCH_DRIVER
+;  -D CUSTOM_TOUCH_DRIVER
   -D CALIBRATE_TOUCH=0
   -D LGFX_DRIVER=LGFX_TDECK
 ;  -D LVGL_DRIVER=LVGL_TDECK
