use custom touch driver

--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -58,8 +58,8 @@ build_flags =
   -D RADIOLIB_DEBUG_SPI=0
   -D RADIOLIB_DEBUG_PROTOCOL=0
   -D RADIOLIB_SPI_PARANOID=0
-;  -D CUSTOM_TOUCH_DRIVER
-  -D CALIBRATE_TOUCH=0
+  -D CUSTOM_TOUCH_DRIVER
+;  -D CALIBRATE_TOUCH=0
   -D LGFX_DRIVER=LGFX_TDECK
 ;  -D LVGL_DRIVER=LVGL_TDECK
 ;  -D LV_USE_ST7789=1
