--- a/platformio.ini
+++ b/platformio.ini
@@ -38,6 +38,7 @@ default_envs = tbeam
 ;default_envs = heltec_vision_master_e213
 ;default_envs = heltec_vision_master_e290
 ;default_envs = heltec_mesh_node_t114
+;default_envs = heltec_mesh_node_t114_noscreen
 extra_configs =
 	arch/*/*.ini
 	variants/*/platformio.ini
