--- a/variants/unphone/platformio.ini
+++ b/variants/unphone/platformio.ini
@@ -41,6 +41,7 @@ build_flags =
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
+  -D INPUTDRIVER_BUTTON_TYPE=21
   -D MAX_NUM_NODES=200
   -D MAX_THREADS=40
   -D HAS_SCREEN=0
@@ -58,7 +59,6 @@ build_flags =
   -D LV_USE_LOG=0
   -D USE_LOG_DEBUG
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
-  -D CALIBRATE_TOUCH=0
   -D LGFX_DRIVER=LGFX_UNPHONE_V9
   -D VIEW_320x240
   -D USE_PACKET_API
