use board definition for mesh-tab

--- a/variants/mesh-tab/platformio.ini
+++ b/variants/mesh-tab/platformio.ini
@@ -2,7 +2,7 @@
 ; https://github.com/valzzu/Mesh-Tab
 [mesh_tab_base]
 extends = esp32s3_base
-board = um_feathers3
+board = mesh-tab
 board_level = extra
 board_upload.flash_size = 16MB
 board_build.partitions = default_16MB.csv
