some changes and moved a library down a levl from the main varient to some of the rak4631 variants

--- a/variants/rak4631_eth_gw/platformio.ini
+++ b/variants/rak4631_eth_gw/platformio.ini
@@ -32,6 +32,7 @@ lib_deps =
   rakwireless/RAKwireless NCP5623 RGB LED library@^1.0.2
   https://github.com/meshtastic/RAK12034-BMX160.git#4821355fb10390ba8557dc43ca29a023bcfbb9d9
   bblanchon/ArduinoJson @ 6.21.4
+  beegee-tokyo/RAK12035_SoilMoisture@^1.0.3
 ; If not set we will default to uploading over serial (first it forces bootloader entry by talking 1200bps to cdcacm)
 ; Note: as of 6/2013 the serial/bootloader based programming takes approximately 30 seconds
 ;upload_protocol = jlink
