--- a/bin/config-dist.yaml
+++ b/bin/config-dist.yaml
@@ -161,3 +161,5 @@ General:
   MaxNodes: 200
   MaxMessageQueue: 100
   ConfigDirectory: /etc/meshtasticd/config.d/
+#  MACAddress: AA:BB:CC:DD:EE:FF
+#  MACAddressSource: eth0
