--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "lib/device-ui"]
 	path = lib/device-ui
 	url = https://github.com/meshtastic/device-ui.git
+	branch = master
 [submodule "meshtestic"]
 	path = meshtestic
 	url = https://github.com/meshtastic/meshTestic
