--- a/variants/rak4631/platformio.ini
+++ b/variants/rak4631/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
   https://github.com/RAKWireless/RAK13800-W5100S.git#1.0.2
   rakwireless/RAKwireless NCP5623 RGB LED library@^1.0.2
   https://github.com/RAKWireless/RAK12034-BMX160.git#dcead07ffa267d3c906e9ca4a1330ab989e957e2
+  arduino-libraries/SD@^1.3.0
 
 ; If not set we will default to uploading over serial (first it forces bootloader entry by talking 1200bps to cdcacm)
 ; Note: as of 6/2013 the serial/bootloader based programming takes approximately 30 seconds
