--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ default_envs = tbeam
 ;default_envs = tlora-v2
 ;default_envs = tlora-v2-1-1_6
 ;default_envs = tlora-v2-1-1_6-tcxo
+;default_envs = tlora-v3-3-0-tcxo
 ;default_envs = tlora-t3s3-v1
 ;default_envs = t-echo
 ;default_envs = canaryone
