--- a/userPrefs.jsonc
+++ b/userPrefs.jsonc
@@ -1,37 +1,19 @@
 {
-  // "USERPREFS_BUTTON_PIN": "36",
-  // "USERPREFS_CHANNELS_TO_WRITE": "3",
-  // "USERPREFS_CHANNEL_0_DOWNLINK_ENABLED": "true",
-  // "USERPREFS_CHANNEL_0_NAME": "DEFCONnect",
-  // "USERPREFS_CHANNEL_0_PRECISION": "14",
-  // "USERPREFS_CHANNEL_0_PSK": "{ 0x38, 0x4b, 0xbc, 0xc0, 0x1d, 0xc0, 0x22, 0xd1, 0x81, 0xbf, 0x36, 0xb8, 0x61, 0x21, 0xe1, 0xfb, 0x96, 0xb7, 0x2e, 0x55, 0xbf, 0x74, 0x22, 0x7e, 0x9d, 0x6a, 0xfb, 0x48, 0xd6, 0x4c, 0xb1, 0xa1 }",
-  // "USERPREFS_CHANNEL_0_UPLINK_ENABLED": "true",
-  // "USERPREFS_CHANNEL_1_DOWNLINK_ENABLED": "true",
-  // "USERPREFS_CHANNEL_1_NAME": "REPLACEME",
-  // "USERPREFS_CHANNEL_1_PRECISION": "14",
-  // "USERPREFS_CHANNEL_1_PSK": "{ 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 }",
-  // "USERPREFS_CHANNEL_1_UPLINK_ENABLED": "true",
-  // "USERPREFS_CHANNEL_2_DOWNLINK_ENABLED": "true",
-  // "USERPREFS_CHANNEL_2_NAME": "REPLACEME",
-  // "USERPREFS_CHANNEL_2_PRECISION": "14",
-  // "USERPREFS_CHANNEL_2_PSK": "{ 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 }",
-  // "USERPREFS_CHANNEL_2_UPLINK_ENABLED": "true",
-  // "USERPREFS_CONFIG_GPS_MODE": "meshtastic_Config_PositionConfig_GpsMode_ENABLED",
-  // "USERPREFS_CONFIG_LORA_IGNORE_MQTT": "true",
-  // "USERPREFS_CONFIG_LORA_REGION": "meshtastic_Config_LoRaConfig_RegionCode_US",
-  // "USERPREFS_CONFIG_OWNER_LONG_NAME": "My Long Name",
-  // "USERPREFS_CONFIG_OWNER_SHORT_NAME": "MLN",
+  "OLED_UA": "Ukraine",
+  "USERPREFS_CHANNELS_TO_WRITE": "1",
+  "USERPREFS_CHANNEL_0_UPLINK_ENABLED": "true",
+  "USERPREFS_CHANNEL_0_DOWNLINK_ENABLED": "true",
+  "USERPREFS_CHANNEL_0_NAME": "mesh.mk.ua",
+  "USERPREFS_CHANNEL_0_PRECISION": "14",
+  "USERPREFS_CHANNEL_0_PSK": "{ 0x5f, 0xc0, 0x5b, 0x42, 0xf2, 0x9f, 0x13, 0xa5, 0x80, 0x24, 0xa, 0x22, 0xe9, 0x55, 0x65, 0x88, 0x15, 0xe, 0xdc, 0xe, 0xe7, 0xfe, 0xd3, 0x5a, 0xf8, 0xd1, 0xad, 0xdf, 0x34, 0x99, 0xe6, 0x14 }",
+  "USERPREFS_CONFIG_GPS_MODE": "meshtastic_Config_PositionConfig_GpsMode_ENABLED",
+  "USERPREFS_CONFIG_LORA_IGNORE_MQTT": "false",
+  "USERPREFS_CONFIG_LORA_REGION": "meshtastic_Config_LoRaConfig_RegionCode_UA_433",
+  "USERPREFS_CONFIG_OWNER_LONG_NAME": "mesh.mk.ua",
   // "USERPREFS_EVENT_MODE": "1",
-  // "USERPREFS_FIXED_BLUETOOTH": "121212",
-  // "USERPREFS_FIXED_GPS": "",
-  // "USERPREFS_FIXED_GPS_ALT": "0",
-  // "USERPREFS_FIXED_GPS_LAT": "48.85873920",
-  // "USERPREFS_FIXED_GPS_LON": "2.294508368",
-  // "USERPREFS_LORACONFIG_CHANNEL_NUM": "31",
-  // "USERPREFS_LORACONFIG_MODEM_PRESET": "meshtastic_Config_LoRaConfig_ModemPreset_SHORT_FAST",
-  // "USERPREFS_SPLASH_TITLE": "DEFCONtastic",
-  "USERPREFS_TZ_STRING": "tzplaceholder                                         "
-  // "USERPREFS_USE_ADMIN_KEY_0": "{ 0xcd, 0xc0, 0xb4, 0x3c, 0x53, 0x24, 0xdf, 0x13, 0xca, 0x5a, 0xa6, 0x0c, 0x0d, 0xec, 0x85, 0x5a, 0x4c, 0xf6, 0x1a, 0x96, 0x04, 0x1a, 0x3e, 0xfc, 0xbb, 0x8e, 0x33, 0x71, 0xe5, 0xfc, 0xff, 0x3c }",
-  // "USERPREFS_USE_ADMIN_KEY_1": "{}",
-  // "USERPREFS_USE_ADMIN_KEY_2": "{}"
+  "USERPREFS_LORACONFIG_CHANNEL_NUM": "1",
+  "USERPREFS_LORACONFIG_MODEM_PRESET": "meshtastic_Config_LoRaConfig_ModemPreset_LONG_FAST",
+  "USERPREFS_SPLASH_TITLE": "mesh.mk.ua",
+  "USERPREFS_TZ_STRING": "EET-2EEST,M3.5.0/3,M10.5.0/4",
+  "USERPREFS_USE_ADMIN_KEY_0": "{ 0x88, 0x43, 0x20, 0x12, 0xb1, 0xd9, 0xe7, 0x92, 0xc4, 0x40, 0x61,0x31, 0x7a, 0xc, 0xc8, 0x69, 0x53, 0x57, 0x60, 0xe0, 0xdb, 0xe3, 0x94, 0xcc, 0xd8, 0x20, 0x2c, 0x8f, 0x4, 0xc, 0x77, 0x29 }"
 }
