--- a/userPrefs.jsonc
+++ b/userPrefs.jsonc
@@ -15,5 +15,5 @@
   "USERPREFS_LORACONFIG_MODEM_PRESET": "meshtastic_Config_LoRaConfig_ModemPreset_LONG_FAST",
   "USERPREFS_SPLASH_TITLE": "mesh.mk.ua",
   "USERPREFS_TZ_STRING": "EET-2EEST,M3.5.0/3,M10.5.0/4",
-  "USERPREFS_USE_ADMIN_KEY_0": "{ 0x88, 0x43, 0x20, 0x12, 0xb1, 0xd9, 0xe7, 0x92, 0xc4, 0x40, 0x61,0x31, 0x7a, 0xc, 0xc8, 0x69, 0x53, 0x57, 0x60, 0xe0, 0xdb, 0xe3, 0x94, 0xcc, 0xd8, 0x20, 0x2c, 0x8f, 0x4, 0xc, 0x77, 0x29 }"
+  "USERPREFS_USE_ADMIN_KEY_0": "{ 0x88, 0x43, 0x20, 0x12, 0xb1, 0xd9, 0xe7, 0x92, 0xc4, 0x40, 0x61,0x31, 0x7a, 0xc, 0xc8, 0x69, 0x53, 0x57, 0x60, 0xe0, 0xdb, 0xe3, 0x94, 0xcc, 0xd8, 0x20, 0x2c, 0x8f, 0x4, 0xc, 0x77, 0x29 }",
 }
