disable serial module and tcp socket api for standalone devices

--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -36,12 +36,13 @@ board_build.partitions = default_8MB.csv ; must be here for some reason, board.j
 
 build_flags =
   ${env:seeed-sensecap-indicator.build_flags}
-  -D HAS_TELEMETRY=0
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_SCREEN=1
   -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
+  -D MESHTASTIC_EXCLUDE_WIFI=1
+  -D MESHTASTIC_EXCLUDE_SERIAL=1
   -D INPUTDRIVER_BUTTON_TYPE=38
   -D HAS_TELEMETRY=0
   -D CONFIG_DISABLE_HAL_LOCKS=1
