--- a/variants/seeed-sensecap-indicator/platformio.ini
+++ b/variants/seeed-sensecap-indicator/platformio.ini
@@ -43,6 +43,7 @@ build_flags =
   -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
   -D MESHTASTIC_EXCLUDE_SERIAL=1
+  -D MESHTASTIC_EXCLUDE_SOCKETAPI=1
   -D INPUTDRIVER_BUTTON_TYPE=38
   -D HAS_TELEMETRY=0
   -D CONFIG_DISABLE_HAL_LOCKS=1
