--- a/variants/unphone/platformio.ini
+++ b/variants/unphone/platformio.ini
@@ -42,6 +42,7 @@ build_flags =
   -D MESHTASTIC_EXCLUDE_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
   -D MESHTASTIC_EXCLUDE_SERIAL=1
+  -D MESHTASTIC_EXCLUDE_SOCKETAPI=1
   -D INPUTDRIVER_BUTTON_TYPE=21
   -D MAX_NUM_NODES=200
   -D MAX_THREADS=40
