--- a/platformio.ini
+++ b/platformio.ini
@@ -143,6 +143,7 @@ lib_deps =
 	adafruit/Adafruit SHT31 Library@2.2.2
 	adafruit/Adafruit PM25 AQI Sensor@1.1.1
 	adafruit/Adafruit MPU6050@2.2.6
+	adafruit/Adafruit LSM303 Accel@1.1.8
 	adafruit/Adafruit LIS3DH@1.3.0
 	adafruit/Adafruit AHTX0@2.0.5
 	adafruit/Adafruit LSM6DS@4.7.3
