--- a/platformio.ini
+++ b/platformio.ini
@@ -144,6 +144,8 @@ lib_deps =
 	adafruit/Adafruit PM25 AQI Sensor@1.1.1
 	adafruit/Adafruit MPU6050@2.2.6
 	adafruit/Adafruit LSM303 Accel@1.1.8
+	adafruit/Adafruit LSM303DLH Mag@1.0.10
+	wollewald/INA226_WE@^1.2.11
 	adafruit/Adafruit LIS3DH@1.3.0
 	adafruit/Adafruit AHTX0@2.0.5
 	adafruit/Adafruit LSM6DS@4.7.3
