--- a/.github/workflows/main_matrix.yml
+++ b/.github/workflows/main_matrix.yml
@@ -138,6 +138,7 @@ jobs:
     uses: ./.github/workflows/package_amd64.yml
 
   build-docker:
+    if: ${{ github.event_name == 'workflow_dispatch' }}
     uses: ./.github/workflows/build_docker.yml
     secrets: inherit
 
