--- a/variants/nibble_rp2040/platformio.ini
+++ b/variants/nibble_rp2040/platformio.ini
@@ -1,6 +1,7 @@
 [env:nibble-rp2040]
 extends = rp2040_base
 board = rpipico
+board_level = extra
 upload_protocol = picotool
 
 # add our variants files to the include and src paths
