Portduino: specify C++ version and add link pthread

--- a/arch/portduino/portduino.ini
+++ b/arch/portduino/portduino.ini
@@ -34,7 +34,9 @@ build_flags =
   -Isrc/platform/portduino
   -DRADIOLIB_EEPROM_UNSUPPORTED
   -DPORTDUINO_LINUX_HARDWARE
+  -lpthread
   -lstdc++fs
   -lbluetooth
   -lgpiod
   -lyaml-cpp
+  -std=c++17
