--- a/platformio.ini
+++ b/platformio.ini
@@ -161,3 +161,4 @@ lib_deps =
 	mprograms/QMC5883LCompass@1.2.3
 	dfrobot/DFRobot_RTU@1.0.3
 	https://github.com/meshtastic/DFRobot_LarkWeatherStation#4de3a9cadef0f6a5220a8a906cf9775b02b0040d
+        robtillaart/INA226@0.6.0
