--- a/.github/workflows/package_raspbian.yml
+++ b/.github/workflows/package_raspbian.yml
@@ -79,7 +79,7 @@ jobs:
           maintainer: Jonathan Bennett
           version: ${{ steps.version.outputs.version }} # refs/tags/v*.*.*
           arch: arm64
-          depends: libyaml-cpp0.7, openssl, libulfius2.7
+          depends: libyaml-cpp0.7, openssl, libulfius2.7, libi2c0
           desc: Native Linux Meshtastic binary.
 
       - uses: actions/upload-artifact@v4
