FIX: build Docker version

--- a/.github/workflows/build_ubuntu_arm64.yml
+++ b/.github/workflows/build_ubuntu_arm64.yml
@@ -7,7 +7,7 @@ permissions:
   packages: write
 
 jobs:
-  build-ubuntu:
+  build-ubuntu-arm64:
     runs-on: [self-hosted, linux, self-hosted-ubuntu, ARM64]
     steps:
       - name: Install libs needed for ubuntu build
