--- a/.github/workflows/package_ubuntu_arm64.yml
+++ b/.github/workflows/package_ubuntu_arm64.yml
@@ -10,10 +10,10 @@ permissions:
 
 jobs:
   build-ubuntu:
-    uses: ./.github/workflows/build_ubuntu.yml
+    uses: ./.github/workflows/build_ubuntu_arm64.yml
     secrets: inherit
 
-  package-ubuntu:
+  package-ubuntu-arm64:
     runs-on: ubuntu-22.04
     needs: build-ubuntu
     steps:
