pull radiolib trunk with SPI-CS fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -121,7 +121,8 @@ lib_deps =
 
 [radiolib_base]
 lib_deps =
-	jgromes/RadioLib@7.1.0
+	; jgromes/RadioLib@7.1.0
+	https://github.com/jgromes/RadioLib.git#92b687821ff4e6c358d866f84566f66672ab02b8
 
 ; Common libs for environmental measurements in telemetry module
 ; (not included in native / portduino)
