--- a/userPrefs.jsonc
+++ b/userPrefs.jsonc
@@ -35,5 +35,5 @@
   // "USERPREFS_USE_ADMIN_KEY_1": "{}",
   // "USERPREFS_USE_ADMIN_KEY_2": "{}",
   // "USERPREFS_NODEINFO_BROADCAST_CHANNEL_HASH": "8"
-  "USERPREFS_USE_COVERAGE_FILTER": "true"
+  "USERPREFS_USE_COVERAGE_FILTER": "true",
 }
